--- a/src/components/App.css
+++ b/src/components/App.css
@@ -20,13 +20,20 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 5vh;
 }
-
+.App-section {
+    text-align: left;
+    flex-grow: 1;
+}
+    .App-section p {
+        color: orange;
+    }
 .App-link {
   color: #61dafb;
 }
