--- a/src/components/NamesList.css
+++ b/src/components/NamesList.css
@@ -3,6 +3,8 @@ ul {
     display: flex;
     flex-direction: column;
     list-style: none;
+    height: 35vh;
+    overflow-y: scroll;
 }
 li:nth-child(even){
     background-color: #515151;
