--- a/src/components/NameForm.css
+++ b/src/components/NameForm.css
@@ -4,6 +4,11 @@ form {
 form > * {
   font-size: calc(10px + 5vmin);
 }
+.name-form-error {
+    font-size: .5em;
+    display:block;
+    color: rgb(255, 106, 106);
+}
 .form-group {
     text-align: left;        
 }
